# python-practice

./: .flake8  .gitignore  .style.yapf  .yapfignore  FEATURES.md  README.md  docker-compose.yml  main.py  requirements.txt  test.sh  toc.md
.github/workflows/: ci.yml  csfix.yml  lint.yml  tests.yml
intro/data-types/: main.py
intro/variables/: main.py
src/algorithms/arrays/: groups_of_special_equivalent_strings.py  inversions.py  maximum_subarray.py  powers_of_sorted_array.py  squares_of_a_sorted_array.py
src/algorithms/binary_trees/: basic_binary_tree.py
src/algorithms/chinese/: a_hundred_of_chicken.py
src/c/: README.md  add.py
src/helper/: bash.py  disable_inspection.py  io.py  ioh.py  line.py  path.py  sysh.py  url.py
src/interactive/: brainfuck.py  clock.py  infinite_loop.py  square.py
src/pytests/: services.py
tests/algorithms/: sorting_test.py
tests/c/: add_test.py
tests/core/: basic_test.py  introduction_test.py
tests/helper/: bash_test.py  io_test.py  line_test.py  path_test.py  url_test.py
tests/interactive/: brainfuck_test.py
tests/pytests/: 00_empty_test.py  01_basic_test.py  02_special_assertions_test.py  03_simple_fixture_test.py  05_yield_fixture_test.py  08_params_test.py  09_params-ception_test.py  10_advanced_params_ception_test.py  11_mark_test.py  12_special_marks.py  13_mark_parametrization.py  14_class_based_test.py  15_advanced_class_test.py  16_scoped_and_meta_fixtures_test.py  18_the_mocker_fixture.py  19_re_usable_mock_test.py  README.md
tests/resources/c/: CMakeLists.txt  README.md
tests/unittests/: basic_test.py
(+191 files in other folders)
